--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "picocolors": "^1.1.1",
         "shadcn-nuxt": "^2.4.3",
         "simple-git-hooks": "^2.13.1",
+        "tsx": "^4.21.0",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
     },
